Simplified README, highlighting ways of running an app